--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 {
-  "presets": ["es2015", "stage-2", "react"],
-  "plugins": ["transform-runtime", "transform-decorators-legacy"],
-  "comments": false
+	"presets": ["es2015", "stage-2", "react"],
+	"plugins": [
+		"transform-class-properties",
+		"transform-decorators-legacy",
+		"react-hot-loader/babel"
+	]
 }
