--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blink-dingtalk-oa",
-  "version": "0.0.1",
+  "name": "react-stage",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,15 +10,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@192.168.1.66:FE/blink-dingtalk-oa.git"
+    "url": "https://github.com/ztktct/react-stage.git"
   },
   "betterScripts": {
     "watch-client": {
       "command": "node webpack/webpack-dev-server.js",
       "env": {
-        "UV_THREADPOOL_SIZE": 100,
-        "NODE_PATH": "./src",
-        "PORT": 3000,
         "NODE_ENV": "development"
       }
     },
@@ -32,20 +29,9 @@
   "author": "fe@dianwoba.com",
   "license": "ISC",
   "dependencies": {
-    "antd": "^2.12.6",
-    "bluebird": "^3.5.0",
-    "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-hot-loader": "next",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.1.2",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
-    "redux-thunk": "^2.2.0",
-    "webpack-dev-server": "^2.7.1"
+    "react-hot-loader": "next"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -56,15 +42,12 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
-    "cssnext": "^1.8.4",
     "eslint": "^4.4.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
@@ -83,11 +66,10 @@
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
-    "strip-loader": "^0.1.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
-    "webpack-dashboard": "^0.4.0",
     "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-isomorphic-tools": "^3.0.3"
   }
