--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,4 @@
 {
-  "extends": "airbnb",
   "env": {
     "browser": true,
     "node": true,
@@ -31,7 +30,7 @@
     "linebreak-style": 0,
     "react/jsx-indent": [2, 2],
     "no-await-in-loop": 0,
-    "semi": 0,
+    "semi": 2,
     "react/sort-comp": 0,
     "react/prop-types": 0,
     "react/require-default-props": 0,
@@ -39,6 +38,8 @@
     "react/prefer-stateless-function": 0,
     "react/jsx-first-prop-new-line": 0,
     "react/jsx-filename-extension": 0,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 2,
     "react/forbid-prop-types": 0,
     "react/no-array-index-key": 0,
     "no-return-assign": 0,
