--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "better-npm-run watch-client",
     "build": "better-npm-run build",
+    "dll": "better-npm-run dll",
+    "lint": "eslint ./src/**/*.js ./src/**/*.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,7 +16,7 @@
   },
   "betterScripts": {
     "watch-client": {
-      "command": "node webpack/webpack-dev-server.js",
+      "command": "webpack --config webpack/webpack.dll.config.js && node webpack/webpack-dev-server.js",
       "env": {
         "NODE_ENV": "development"
       }
@@ -29,27 +31,25 @@
   "author": "fe@dianwoba.com",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-hot-loader": "next"
+    "babel-polyfill": "^6.26.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "next",
+    "react-loadable": "^4.0.5",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
     "eslint": "^4.4.1",
-    "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.7.0",
@@ -67,6 +67,7 @@
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
