--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "better-npm-run watch-client",
     "build": "better-npm-run build",
-    "lint": "tslint --force ./src/**/*.ts ./src/**/*.tsx",
+    "lint": "eslint ./src/**/*.js ./src/**/*.jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,23 +30,30 @@
   "author": "fe@dianwoba.com",
   "license": "ISC",
   "dependencies": {
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
+    "babel-polyfill": "^6.26.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-hot-loader": "next",
     "react-loadable": "^4.0.5",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "@types/react": "16.0.5",
-    "@types/react-dom": "15.5.4",
-    "@types/react-hot-loader": "^3.0.4",
-    "@types/react-loadable": "^4.0.4",
-    "@types/react-router-dom": "^4.0.8",
     "autoprefixer": "^7.1.2",
-    "awesome-typescript-loader": "^3.2.3",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
+    "eslint": "^4.4.1",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.2.1",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
@@ -59,10 +66,6 @@
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "tslint": "^5.7.0",
-    "tslint-eslint-rules": "^4.1.1",
-    "tslint-react": "^3.2.0",
-    "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.12.0",
