feat(config): 优化代码结构，新增打包分析

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "better-npm-run watch-client",
     "build": "better-npm-run build",
     "lint": "eslint ./src/**/*.js ./src/**/*.jsx",
+    "analyse": "better-npm-run analyse",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,9 +22,15 @@
       }
     },
     "build": {
-      "command": "webpack --config webpack/prod.config.js",
+      "command": "webpack --config webpack/webpack.prod.conf.js",
       "env": {
         "NODE_ENV": "production"
+      }
+    },
+    "analyse": {
+      "command": "webpack --config webpack/webpack.prod.conf.js",
+      "env": {
+        "NODE_ENV": "analyse"
       }
     }
   },
@@ -38,16 +45,15 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "^0.1.16",
-    "css-loader": "^0.28.5",
+    "css-loader": "^0.28.7",
     "eslint": "^4.4.1",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-babel": "^4.1.2",
@@ -58,19 +64,21 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "happypack": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.0.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2",
-    "webpack-isomorphic-tools": "^3.0.3"
+    "webpack-isomorphic-tools": "^3.0.3",
+    "webpack-merge": "^4.1.0"
   }
 }
