--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "better-npm-run watch-client",
     "build": "better-npm-run build",
+    "analyse": "better-npm-run analyse",
     "lint": "tslint --force ./src/**/*.ts ./src/**/*.tsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,9 +22,15 @@
       }
     },
     "build": {
-      "command": "webpack --config webpack/prod.config.js",
+      "command": "webpack --config webpack/webpack.prod.conf.js",
       "env": {
         "NODE_ENV": "production"
+      }
+    },
+    "analyse": {
+      "command": "webpack --config webpack/webpack.prod.conf.js",
+      "env": {
+        "NODE_ENV": "analyse"
       }
     }
   },
@@ -43,14 +50,15 @@
     "@types/react-loadable": "^4.0.4",
     "@types/react-router-dom": "^4.0.8",
     "autoprefixer": "^7.1.2",
-    "awesome-typescript-loader": "^3.2.3",
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.5",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "fork-ts-checker-webpack-plugin": "^0.2.8",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "happypack": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
@@ -59,15 +67,18 @@
     "postcss-loader": "^2.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "ts-loader": "^2.3.7",
     "tslint": "^5.7.0",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.2.0",
     "typescript": "^2.5.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
     "webpack-hot-middleware": "^2.18.2",
-    "webpack-isomorphic-tools": "^3.0.3"
+    "webpack-isomorphic-tools": "^3.0.3",
+    "webpack-merge": "^4.1.0"
   }
 }
