--- a/package.json
+++ b/package.json
@@ -37,17 +37,18 @@
   "author": "fe@dianwoba.com",
   "license": "ISC",
   "dependencies": {
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
-    "react-hot-loader": "next",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.0.0",
     "react-loadable": "^4.0.5",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "@types/react": "16.0.5",
-    "@types/react-dom": "15.5.4",
+    "@types/react": "^16.0.10",
+    "@types/react-dom": "^16.0.1",
     "@types/react-hot-loader": "^3.0.4",
     "@types/react-loadable": "^4.0.4",
+    "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.8",
     "autoprefixer": "^7.1.2",
     "better-npm-run": "^0.1.0",
