--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-loadable": "^4.0.4",
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.8",
+    "@types/webpack-env": "^1.13.2",
     "autoprefixer": "^7.1.2",
     "better-npm-run": "^0.1.0",
     "clean-webpack-plugin": "^0.1.16",
@@ -61,6 +62,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "happypack": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
