--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "baseUrl": "types",
-    "typeRoots": ["./src/types", "types"],
+    "typeRoots": ["./src/types", "node_modules/@types"],
     "lib": ["es6", "dom"]
   },
   "exclude": [
