--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "happypack": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.5.3",
     "opn": "^5.1.0",
     "postcss-cssnext": "^3.0.2",
